Разметка для header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="menu">
+            <ul class="menu__list">
+                <li class="menu__list-item">1</li>
+                <li class="menu__list-item">2</li>
+                <li class="menu__list-item">3</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
